--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
     <link rel="apple-touch-icon" href="/icon.png">
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
+    <%= stylesheet_link_tag "tailwind", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
@@ -26,14 +27,15 @@
     <%= render "shared/nav" %>
 
     <main class="container mx-auto mt-6 px-5">
-      <% flash.each do |type, message| %>
-        <% next if message.blank? %>
-        <div role="alert"
-             class="m-4 w-full rounded-lg p-4
-                    <%= type.to_s == 'notice' ? 'bg-green-100 text-green-900' : 'bg-red-100 text-red-900' %>">
-          <p class="text-sm"><%= message %></p>
-        </div>
-      <% end %>
+      <%= render "shared/flash" %>
+        <% flash.each do |type, message| %>
+          <% next if message.blank? %>
+          <div role="alert"
+              class="m-4 w-full rounded-lg p-4
+                      <%= type.to_s == 'notice' ? 'bg-green-100 text-green-900' : 'bg-red-100 text-red-900' %>">
+            <p class="text-sm"><%= message %></p>
+          </div>
+        <% end %>
       <%= yield %>
     </main>
   </body>
