--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,17 +1,10 @@
-<div class="mx-auto max-w-2xl p-4">
-  <h1 class="text-2xl font-bold mb-4">新規タスク</h1>
-
-  <%= simple_form_for(@task) do |f| %>
-    <div class="space-y-4">
-      <%= f.input :title, required: true, input_html: { class: "w-full" } %>
-      <%= f.input :body, as: :text, input_html: { rows: 6, class: "w-full" } %>
-      <%= f.input :due_at, as: :datetime, input_html: { class: "w-full" } %>
-      <%= f.input :status, collection: Task.statuses.keys, include_blank: false %>
-      <%= f.input :priority, collection: Task.priorities.keys, include_blank: false %>
-      <div class="flex gap-2">
-        <%= f.button :submit, "作成する", class: "btn-main" %>
-        <%= link_to "キャンセル", tasks_path, class: "btn-ghost" %>
-      </div>
+<div class="mx-auto max-w-3xl px-4 py-6">
+  <div class="page-head mb-4">
+    <h1 class="text-2xl font-bold">新規タスク</h1>
+    <div class="flex gap-2">
+      <%= link_to "一覧に戻る", tasks_path, class: "btn-ghost" %>
     </div>
-  <% end %>
+  </div>
+
+  <%= render "form", task: @task %>
 </div>
